comments to understand the code in cardgame